Сверстана страница "Контакты"

--- a/source/company.html
+++ b/source/company.html
@@ -37,19 +37,19 @@
         <nav class='navigation navigation--nojs navigation--close'>
           <ul class='navigation__list'>
             <li class='navigation__item'>
-              <a class='navigation__link'>О компании</a>
+              <a class='navigation__link navigation__link--current'>О компании</a>
             </li>
             <li class='navigation__item'>
               <a class='navigation__link' href='catalog.html'>Каталог</a>
             </li>
             <li class='navigation__item'>
-              <a class='navigation__link' href='#'>Примеры работ</a>
+              <a class='navigation__link' href='work-examples.html'>Примеры работ</a>
             </li>
             <li class='navigation__item'>
-              <a class='navigation__link' href='#'>Блог</a>
+              <a class='navigation__link' href='blog.html'>Блог</a>
             </li>
             <li class='navigation__item'>
-              <a class='navigation__link' href='#'>Контакты</a>
+              <a class='navigation__link' href='contacts.html'>Контакты</a>
             </li>
           </ul>
           <div>
