--- a/source/winder-ladder.html
+++ b/source/winder-ladder.html
@@ -43,13 +43,13 @@
               <a class='navigation__link' href='catalog.html'>Каталог</a>
             </li>
             <li class='navigation__item'>
-              <a class='navigation__link' href='#'>Примеры работ</a>
+              <a class='navigation__link' href='work-examples.html'>Примеры работ</a>
             </li>
             <li class='navigation__item'>
               <a class='navigation__link' href='#'>Блог</a>
             </li>
             <li class='navigation__item'>
-              <a class='navigation__link' href='#'>Контакты</a>
+              <a class='navigation__link' href='contacts.html'>Контакты</a>
             </li>
           </ul>
           <div>
@@ -85,7 +85,7 @@
           <div class='winder-ladder__wrapper'>
             <div class='winder-ladder__wrapper-img'>
               <picture>
-                <source media='(min-width: 1440px)' src='img/winder-ladder/winder-ladder.jpg' srcset='img/winder-ladder/winder-ladder@2x.jpg 2x' width='520' height='400'>
+                <source media='(min-width: 1440px)' srcset='img/winder-ladder/winder-ladder.jpg 1x, img/winder-ladder/winder-ladder@2x.jpg 2x' width='520' height='400'>
                 <img class='winder-ladder__img' src='img/winder-ladder/winder-ladder-mobile.jpg' srcset='img/winder-ladder/winder-ladder-mobile@2x.jpg 2x' width='420' height='370' alt=''>
               </picture>
             </div>
