--- a/source/index.html
+++ b/source/index.html
@@ -43,13 +43,13 @@
               <a class='navigation__link' href='catalog.html'>Каталог</a>
             </li>
             <li class='navigation__item'>
-              <a class='navigation__link' href='#'>Примеры работ</a>
+              <a class='navigation__link' href='work-examples.html'>Примеры работ</a>
             </li>
             <li class='navigation__item'>
-              <a class='navigation__link' href='#'>Блог</a>
+              <a class='navigation__link' href='blog.html'>Блог</a>
             </li>
             <li class='navigation__item'>
-              <a class='navigation__link' href='#'>Контакты</a>
+              <a class='navigation__link' href='contacts.html'>Контакты</a>
             </li>
           </ul>
           <div>
