стилизована мобильная версия страницы "Контакты"

--- a/source/contacts.html
+++ b/source/contacts.html
@@ -79,6 +79,7 @@
             <a class='breadcrumbs__link breadcrumbs__link--to-main' href='index.html'>Вернуться на главную</a>
           </div>
           <h1 class='contacts__title title-decorate'>Контакты</h1>
+          <div class='contacts__wrapper'>
           <div class='contacts__wrapper-map'>
             <picture>
               <source media='(min-width: 1440px)' srcset='img/contacts/map.jpg 1x, img/contacts/map@2x.jpg 2x' width='1218' height='681'>
@@ -100,6 +101,7 @@
               <span>lest52monolit@gmail.com</span>
             </li>
           </ul>
+        </div>
         </div>
       </div>
     </section>
