--- a/source/catalog.html
+++ b/source/catalog.html
@@ -291,21 +291,21 @@
         <div class='footer__column-center'>
           <ul class='footer__navigation-list'>
             <li class='footer__navigation-item'>
-              <a class='footer__navigation-link' href='#'>О компании</a>
+              <a class='footer__navigation-link' href='company.html'>О компании</a>
             </li>
             <li class='footer__navigation-item'>
-              <a class='footer__navigation-link' href='#'>Каталог</a>
+              <a class='footer__navigation-link' href='catalog.html'>Каталог</a>
             </li>
             <li class='footer__navigation-item'>
-              <a class='footer__navigation-link' href='#'>Блог</a>
+              <a class='footer__navigation-link' href='blog.html'>Блог</a>
             </li>
           </ul>
           <ul class='footer__navigation-list'>
             <li class='footer__navigation-item'>
-              <a class='footer__navigation-link' href='#'>Примеры работ</a>
+              <a class='footer__navigation-link' href='word-examples.html'>Примеры работ</a>
             </li>
             <li class='footer__navigation-item'>
-              <a class='footer__navigation-link' href='#'>Контакты</a>
+              <a class='footer__navigation-link' href='contacts.html'>Контакты</a>
             </li>
           </ul>
         </div>
